Added logic to insert application record when candidate is fetched

--- a/mdapi_output/package.xml
+++ b/mdapi_output/package.xml
@@ -8,6 +8,7 @@
         <name>ApexClass</name>
     </types>
     <types>
+        <members>ApplicationTrigger</members>
         <members>JobPostTrigger</members>
         <name>ApexTrigger</name>
     </types>
